--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -581,7 +581,7 @@ For $\hvcencoded$, an opening consists of the same number of elements from $\rin
   \multirow{4}{*}{opening}& \multirow{2}{*}{$\hvcplain$} &individually verifying & $\bigl(2\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$\\\cline{3-4}
                           &                                   &strongly verifying & $\bigl(2\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\bagg+1)}$  \\\cline{2-4}
                           & \multirow{2}{*}{$\hvcencoded$}    &individually verifying & $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$\\\cline{3-4}
-                          &                                   &strongly verifying & $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}+ \tau\limbs n\normalceil{\log (\lfloor\frac{\bagg}{\eta}\rfloor+2)}$\\
+                          &                                   &strongly verifying & $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\bagg+1)}+ \tau\limbs n\normalceil{\log (\lfloor\frac{\bagg}{\eta}\rfloor+2)}$\\
                           \hline
  \end{tabular}
  \medskip % Alternatively, put caption on top (some style guides suggest this)
