--- a/sections/eth.tex
+++ b/sections/eth.tex
@@ -1,5 +1,7 @@
 \section{Application to Ethereum}\label{sec:ethereum}
 
+\cameraready{This section (including this text itself) is not \textbackslash input'ed for the cameraready version -- color-coding this as with other text when compiling both versions does not work and I'm too lazy to fix the LaTeX for this.}
+
 One important class of applications is proof-of-stake blockchains such as Ethereum. %other example?
 In this section, we briefly discuss how one could apply Chipmunk for Ethereum and explore the tradeoff space involved.
 Note, however, that our focus is primarily on Chipmunk and not the blockchain's consensus protocol, which is out of scope of this paper;
