--- a/sections/multisig.tex
+++ b/sections/multisig.tex
@@ -202,14 +202,14 @@ If $\hots$ is individually correct, $(\rho,W,\errorbound)$-probabilistically hom
   The theorem follows immediately from \autoref{lem:msigindcorrect}, \autoref{lem:msigaggcorrect}, \autoref{lem:msigunf} below.\qed
 \end{proof}
 
-Our concrete proposal is to use $\hvcencoded$ and $\otschip$ to thereby construct the Chipmunk synchronized multi-signature.
+Our concrete proposal is to use \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and $\otschip$ to thereby construct the Chipmunk synchronized multi-signature.
 \begin{definition}[Chipmunk synchronized multi-signatures]\label{def:actual_chipmunk}
 Let $n, q, q', \eta, \tau, \rho, \alpha_H, \alpha_w, \gamma$ be positive integers, with $n$ being a power of two, $q, q'$ prime.
-Let $\ring, \ring_q, \ring_{q'}$ be as usual. We define the synchronized multi-signature Chipmunk, denoted $\msigchip$, by instanciating the construction from \autoref{fig:nidvconst} with $\hvcencoded$ and $\otschip$.
+Let $\ring, \ring_q, \ring_{q'}$ be as usual. We define the synchronized multi-signature Chipmunk, denoted $\msigchip$, by instanciating the construction from \autoref{fig:nidvconst} with \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and $\otschip$.
 \end{definition}
 As a corollary of \autoref{thm:mainconstruction}, we obtain that $\msigchip$ is an unforgeable synchronized $\rho$-wise multi-signature that is individually correct and has correct aggregations in the presence of rogue keys and signatures,
-provided $\hvcencoded$ and $\otschip$ satisfy the appropriate security properties. The latter are guaranteed by \autoref{theo:veccom}, \autoref{thm:encodedhvcworks} and \autoref{theo:kots}, provided we set parameters appropriately and the appropriate Ring-SIS problems are hard.
-We collect the neccessary conditions in \autoref{tab:constraints}. Note that $W$ from \autoref{thm:mainconstruction} corresponds to $W = \tern_{\alpha_w}$. The parameter $\xi$ from $\hvcencoded$ and the parameter $\gamma$ from $\otschip$ are related by $\xi = 2\gamma$.
+provided \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and $\otschip$ satisfy the appropriate security properties. The latter are guaranteed by \autoref{theo:veccom}, \autoref{thm:encodedhvcworks} and \autoref{theo:kots}, provided we set parameters appropriately and the appropriate Ring-SIS problems are hard.
+We collect the neccessary conditions in \autoref{tab:constraints}. Note that $W$ from \autoref{thm:mainconstruction} corresponds to $W = \tern_{\alpha_w}$. The parameter $\xi$ from \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and the parameter $\gamma$ from $\otschip$ are related by $\xi = 2\gamma$.
 
 \bigskip\noindent
 We now proceed to show \autoref{lem:msigindcorrect}, \autoref{lem:msigaggcorrect} and \autoref{lem:msigunf} to actually prove \autoref{thm:mainconstruction}.
